--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="full">
          <h1  class="topic" style="text-align: center;">Trần Quang Tài</h1>
-         <p class="note">coder(new person)</p>
+         <p class="note">new person</p>
     </div>
     <div class="container">
         <div class="wellcome" style="text-align: center;">
